--- a/asistencias/asistencias_obras/templates/obras/lista_obras.html
+++ b/asistencias/asistencias_obras/templates/obras/lista_obras.html
@@ -1,3 +1,5 @@
+{% extends "layouts/base_admin.html" %}
+
 {% block content %}
 <h2>Lista de Obras</h2>
 <a href="{% url 'crear_obra' %}">Crear obra</a>
