--- a/asistencias/asistencias_obras/templates/lista_user_profiles.html
+++ b/asistencias/asistencias_obras/templates/lista_user_profiles.html
@@ -1,29 +1,38 @@
 {% extends "layouts/base_admin.html" %}
 
 {% block content %}
-<h2>Asignaciones de Obras</h2>
 
-<table>
-    <thead>
-        <tr>
-            <th>Usuario</th>
-            <th>Rol</th>
-            <th>Obra Asignada</th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for profile in user_profiles %}
-        <tr>
-            <td>{{ profile.user.username }}</td>
-            <td>{{ profile.get_role_display }}</td>
-            <td>{{ profile.obra.nombre|default:"N/A" }}</td>
-            <td>
-                <!-- Asumiendo que tienes una vista para asignar/editar la obra de un user profile -->
-                <a href="{% url 'asignar_obra_a_usuario' profile.user.id %}">Asignar/Editar Obra</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<h1 class="text-3xl text-black pb-6">Asignaciones</h1>
+
+<div class="w-full mt-6">
+    <p class="text-xl pb-3 flex items-center">
+        <i class="fas fa-list mr-3"></i> Lista de Asignaciones
+    </p>
+    <div class="bg-white overflow-auto">
+        <table class="min-w-full leaading-normal">
+            <thead>
+                <tr>
+                    <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Usuario</th>
+                    <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Rol</th>
+                    <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Obra Asignada</th>
+                    <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for profile in user_profiles %}
+                <tr>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ profile.user.username }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ profile.get_role_display }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ profile.obra.nombre|default:"N/A" }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                        <!-- Asumiendo que tienes una vista para asignar/editar la obra de un user profile -->
+                        <a href="{% url 'asignar_obra_a_usuario' profile.user.id %}" class="boton-accion  boton-activar boton-desactivar">Asignar/Editar Obra</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+
 {% endblock %}
