--- a/asistencias/asistencias_obras/templates/layouts/base_admin.html
+++ b/asistencias/asistencias_obras/templates/layouts/base_admin.html
@@ -60,13 +60,13 @@
 
     <aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl">
         <div class="p-6">
-            <a href="{% url 'crear_empleado' %}" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Admin</a>
+            <a href="{% url 'crear_obra' %}" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Admin</a>
             <button class="w-full bg-white cta-btn font-semibold py-2 mt-5 rounded-br-lg rounded-bl-lg rounded-tr-lg shadow-lg hover:shadow-xl hover:bg-gray-300 flex items-center justify-center">
                 <i class="fas fa-plus mr-3"></i> Nueva Obra
             </button>
         </div>
         <nav class="text-white text-base font-semibold pt-3">
-            <a href="/admin_dashboard" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+            <a href="{% url 'admin_dashboard' %}" class="flex items-center text-white py-4 pl-6 nav-item {% if path_name == 'admin_dashboard' %}active-nav-link{% endif %}">
                 <i class="fas fa-tachometer-alt mr-3"></i>
                 Dashboard
             </a>
@@ -78,9 +78,14 @@
                 <i class="fas fa-table mr-3"></i>
                 Asignaciones
             </a>
-            <a href="{% url 'register' %}" class="flex items-center active-nav-link text-white py-4 pl-6 nav-item">
+            <a href="{% url 'register' %}" class="flex items-center  text-white py-4 pl-6 nav-item">
                 <i class="fas fa-align-left mr-3"></i>
                 Crear Supervisores
+            </a>
+            <!-- Enlace de cierre de sesión -->
+            <a href="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+                <i class="fas fa-sign-out-alt mr-3"></i>
+                Cerrar Sesión
             </a>
         </nav>
     </aside>
@@ -96,7 +101,7 @@
                 <button x-show="isOpen" @click="isOpen = false" class="h-full w-full fixed inset-0 cursor-default"></button>
                 <div x-show="isOpen" class="absolute w-32 bg-white rounded-lg shadow-lg py-2 mt-16">
                     <a href="#" class="block px-4 py-2 account-link hover:text-white">Cuenta</a>
-                    <a href="#" class="block px-4 py-2 account-link hover:text-white">Sign Out</a>
+                    <a href="{% url 'logout' %}" class="block px-4 py-2 account-link hover:text-white">Cerrar Sesion</a>
                 </div>
             </div>
         </header>
@@ -134,9 +139,9 @@
                     <i class="fas fa-user mr-3"></i>
                     Cuenta
                 </a>
-                <a href="#" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+                <a href="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-sign-out-alt mr-3"></i>
-                    Sign Out
+                    Cerrar Sesion
                 </a>
             </nav>
             <!-- <button class="w-full bg-white cta-btn font-semibold py-2 mt-5 rounded-br-lg rounded-bl-lg rounded-tr-lg shadow-lg hover:shadow-xl hover:bg-gray-300 flex items-center justify-center">
