--- a/asistencias/asistencias_obras/templates/registration/registro.html
+++ b/asistencias/asistencias_obras/templates/registration/registro.html
@@ -1,23 +1,37 @@
 {% extends "layouts/base_admin.html" %}
 <!-- templates/registration/register.html -->
 
-
+{% load widget_tweaks %}
 {% block content %}
-  <h2>Register</h2>
-  <form method="post" class="my-form">
-    {% csrf_token %}
-    {% for field in form %}
-      <div class="form-group">
-        {{ field.label_tag }}  <!-- Renderiza la etiqueta del campo -->
-        {{ field }}            <!-- Renderiza el campo de entrada -->
-        {% if field.help_text %}
-          <small class="form-text text-muted">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <div class="alert alert-danger">{{ error }}</div>
-        {% endfor %}
+<h1 class="w-full text-3xl text-black pb-6">Registro</h1> <!-- Añadido text-center para centrar el título -->
+
+<div class="flex justify-center"> <!-- Div añadido para centrar el contenido -->
+  <div class="flex flex-wrap justify-center"> <!-- Ajuste para mantener el contenido centrado y responsivo -->
+    <div class="w-full lg:w-1/2 my-6 px-4"> <!-- Ajustado para centrar y mantener el padding en dispositivos más grandes -->
+      <p class="text-x pb-6 flex justify-center items-center"> <!-- Ajuste para centrar el texto -->
+        <i class="fas fa-list mr-3"></i>Formulario de Registro
+      </p>
+      <div class="leading-loose">
+        <form method="post" class="p-10 bg-white rounded shadow-xl mx-auto"> <!-- mx-auto para centrar el formulario -->
+          {% csrf_token %}
+          {% for field in form %}
+            <div class="mt-2">
+              <label for="{{ field.id_for_label }}" class="block text-sm text-gray-600">{{ field.label }}</label>
+              {{ field|add_class:"w-full px-5 py-2 text-gray-700 bg-gray-200 rounded" }}
+              {% if field.help_text %}
+                <small class="form-text text-muted">{{ field.help_text }}</small>
+              {% endif %}
+              {% for error in field.errors %}
+                <div class="alert alert-danger">{{ error }}</div>
+              {% endfor %}
+            </div>
+          {% endfor %}
+          <br>
+          <button type="submit" class="px-4 py-1 text-white font-light tracking-wider bg-gray-900 rounded">Register</button>
+        </form>
       </div>
-    {% endfor %}
-    <button type="submit" class="btn btn-primary">Register</button>
-  </form>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
