Front funcional al 75%, faltan pendientes

--- a/asistencias/asistencias_obras/templates/layouts/base_user.html
+++ b/asistencias/asistencias_obras/templates/layouts/base_user.html
@@ -5,11 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador</title>
+    <title>Supervisor/title>
 
     <!-- Tailwind -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    
     <style>
         @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
         .font-family-karla { font-family: karla; }
@@ -62,27 +61,17 @@
 
     <aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl">
         <div class="p-6">
-            <a href="{% url 'crear_obra' %}" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Admin</a>
-            <button class="w-full bg-white cta-btn font-semibold py-2 mt-5 rounded-br-lg rounded-bl-lg rounded-tr-lg shadow-lg hover:shadow-xl hover:bg-gray-300 flex items-center justify-center">
-                <i class="fas fa-plus mr-3"></i> Nueva Obra
-            </button>
+            <a href="{% url 'user_asistencia' %}" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Supervisor</a>
+
         </div>
         <nav class="text-white text-base font-semibold pt-3">
-            <a href="{% url 'admin_dashboard' %}" class="flex items-center text-white py-4 pl-6 nav-item {% if path_name == 'admin_dashboard' %}active-nav-link{% endif %}">
+            <a href="{% url 'user_asistencia' %}" class="flex items-center text-white py-4 pl-6 nav-item {% if path_name == 'user_asistencia' %}active-nav-link{% endif %}">
                 <i class="fas fa-tachometer-alt mr-3"></i>
-                Dashboard
+                Toma de Asistencia
             </a>
-            <a href="{% url 'lista_obras' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-                <i class="fas fa-sticky-note mr-3"></i>
-                Obras
-            </a>
-            <a href="{% url 'lista_user_profiles' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+            <a href="#" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
                 <i class="fas fa-table mr-3"></i>
-                Asignaciones
-            </a>
-            <a href="{% url 'register' %}" class="flex items-center  text-white py-4 pl-6 nav-item">
-                <i class="fas fa-align-left mr-3"></i>
-                Crear Supervisores
+                Asistencia
             </a>
             <!-- Enlace de cierre de sesión -->
             <a href="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
@@ -112,7 +101,7 @@
         <!-- Mobile Header & Nav -->
         <header x-data="{ isOpen: false }" class="w-full bg-sidebar py-5 px-6 sm:hidden">
             <div class="flex items-center justify-between">
-                <a href="index.html" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Admin</a>
+                <a href="index.html" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Supervisor</a>
                 <button @click="isOpen = !isOpen" class="text-white text-3xl focus:outline-none">
                     <i x-show="!isOpen" class="fas fa-bars"></i>
                     <i x-show="isOpen" class="fas fa-times"></i>
@@ -121,26 +110,13 @@
 
             <!-- Dropdown Nav -->
             <nav :class="isOpen ? 'flex': 'hidden'" class="flex flex-col pt-4">
-                <a href="/admin_dashboard" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+                <a href="{% url 'user_asistencia' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-tachometer-alt mr-3"></i>
-                    Dashboard
+                    Toma de Asistencia
                 </a>
-                <a href="{% url 'lista_obras' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-sticky-note mr-3"></i>
-                    Obras
-                </a>
-                <a href="{% url 'lista_user_profiles' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-table mr-3"></i>
-                    Asignaciones
-                </a>
-                <a href="{% url 'register' %}" class="flex items-center active-nav-link text-white py-2 pl-4 nav-item">
-                    <i class="fas fa-align-left mr-3"></i>
-                    Crear Supervisores
-                </a>
-
                 <a href="#" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-user mr-3"></i>
-                    Cuenta
+                    <i class="fas fa-table mr-3"></i>
+                    Asistencias
                 </a>
                 <a href="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-sign-out-alt mr-3"></i>
