--- a/asistencias/asistencias_obras/templates/supervisor/user_asistencia.html
+++ b/asistencias/asistencias_obras/templates/supervisor/user_asistencia.html
@@ -87,7 +87,7 @@
                     Toma de Asistencia
                 </a>
                 <!-- Enlace de cierre de sesión -->
-                <a href="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+                <a href="javascript:void(0);" id="logoutLink" data-url="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
                     <i class="fas fa-sign-out-alt mr-3"></i>
                     Cerrar Sesión
                 </a>
@@ -106,7 +106,7 @@
                     <button x-show="isOpen" @click="isOpen = false" class="h-full w-full fixed inset-0 cursor-default"></button>
                     <div x-show="isOpen" class="absolute w-32 bg-white rounded-lg shadow-lg py-2 mt-16">
                         <a href="#" class="block px-4 py-2 account-link hover:text-white">Cuenta</a>
-                        <a href="{% url 'logout' %}" class="block px-4 py-2 account-link hover:text-white">Cerrar Sesion</a>
+                        <a href="javascript:void(0);" id="logoutLink" data-url="{% url 'logout' %}" class="block px-4 py-2 account-link hover:text-white">Cerrar Sesion</a>
                     </div>
                 </div>
             </header>
@@ -127,7 +127,7 @@
                         <i class="fas fa-tachometer-alt mr-3"></i>
                         Toma de Asistencia
                     </a>
-                    <a href="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+                    <a href="javascript:void(0);" id="logoutLink" data-url="{% url 'logout' %}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                         <i class="fas fa-sign-out-alt mr-3"></i>
                         Cerrar Sesion
                     </a>
@@ -182,5 +182,23 @@
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
         <!-- Font Awesome -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+        <script>
+            document.getElementById('logoutLink').addEventListener('click', function() {
+                var form = document.createElement('form');
+                form.method = 'POST';
+                form.action = this.getAttribute('data-url'); // Obtener la URL desde el atributo de datos
+    
+                // CSRF token
+                var csrfToken = document.createElement('input');
+                csrfToken.type = 'hidden';
+                csrfToken.name = 'csrfmiddlewaretoken';
+                csrfToken.value = '{{ csrf_token }}'; // Esto necesitará ser ajustado si estás en un archivo .js
+                form.appendChild(csrfToken);
+    
+                document.body.appendChild(form);
+                form.submit();
+            });
+    
+        </script>
     </body>
     </html>
