--- a/asistencias/asistencias_obras/templates/admin/lista_obras.html
+++ b/asistencias/asistencias_obras/templates/admin/lista_obras.html
@@ -1,6 +1,8 @@
 {% extends "layouts/base_admin.html" %}
 
 {% block content %}
+<meta name="csrf-token" content="{{ csrf_token }}">
+
 <h1 class="text-3xl text-black pb-6">Obras</h1>
 
 <div class="w-full mt-6">
@@ -29,7 +31,7 @@
             </thead>
             <tbody class="text-gray-700">
                 {% for obra in obras %}
-                <tr>
+                <tr id="obraRow_{{ obra.id }}">
                     <td class="w-1/3 text-left py-3 px-4">{{ obra.nombre }}</td>
                     <td class="w-1/3 text-left py-3 px-4">{{ obra.ubicacion }}</td>
                     <td class="w-1/3 text-left py-3 px-4">{{ obra.descripcion }}</td>
@@ -40,7 +42,7 @@
                     <td class="text-left py-3 px-4">
                         <a href="{% url 'cambiar_estado_obra' obra.id %}" class="boton-accion {% if obra.activa %}boton-inactivar{% else %}boton-activar{% endif %}">
                             {% if obra.activa %}Inactivar{% else %}Activar{% endif %}</a>                        
-                        <a href="{% url 'eliminar_obra' obra.id %}" class="boton-accion boton-eliminar" onclick="return confirmDelete()">Eliminar</a>
+                        <a href="javascript:void(0);" class="btn btn-danger" onclick="showConfirmModal('{{ obra.id }}')">Eliminar</a>
                         <a href="{% url 'editar_obra' obra.id %}" class="boton-accion boton-editar">Modificar</a>  <!-- Asumiendo que tienes una vista de edición -->
                     </td>
                 </tr>
@@ -52,10 +54,61 @@
     </div>
 
 </div>
+<!-- Modal de Confirmación -->
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Eliminación</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ¿Estás seguro de que quieres eliminar esta obra?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Asegúrate de incluir jQuery y Bootstrap JS para los modales -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <script>
-    function confirmDelete() {
-        return confirm('¿Estás seguro de que quieres eliminar esta obra?');
+    var obraIdToDelete = null; // Variable global para almacenar el ID de la obra a eliminar
+
+    function showConfirmModal(obraId) {
+        obraIdToDelete = obraId; // Almacena el ID de la obra a eliminar
+        $('#confirmDeleteModal').modal('show');
     }
-    </script>
-    
+
+    $(document).ready(function() {
+        $('#confirmDeleteButton').click(function() {
+            var csrfToken = $('meta[name="csrf-token"]').attr('content');
+
+            $.ajax({
+                url: '/obra/eliminar/' + obraIdToDelete + '/',
+                type: 'POST',   
+                data: {
+                    'csrfmiddlewaretoken': csrfToken,
+                    'obra_id': obraIdToDelete,
+                },
+                success: function(response) {
+                    $('#confirmDeleteModal').modal('hide');
+                    $('#obraRow_' + obraIdToDelete).remove(); // Elimina la fila del DOM
+                    obraIdToDelete = null; // Resetea el ID de la obra a eliminar
+                },
+                error: function(xhr, errmsg, err) {
+                    console.log(xhr.status + ": " + xhr.responseText);
+                }
+            });
+        });
+    });
+</script>
 {% endblock %}
