--- a/asistencias/asistencias_obras/templates/layouts/base_admin.html
+++ b/asistencias/asistencias_obras/templates/layouts/base_admin.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta name="csrf-token" content="{{ csrf_token }}">
 
     <!-- Tailwind -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
     <style>
         @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
         .font-family-karla { font-family: karla; }
@@ -60,7 +62,7 @@
 
 </head>
 <body class="bg-gray-100 font-family-karla flex">
-
+     
     <aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl">
         <div class="p-6">
             <a  class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Admin</a>
@@ -134,7 +136,7 @@
                     <i class="fas fa-table mr-3"></i>
                     Asignaciones
                 </a>
-                <a href="{% url 'register' %}" class="flex items-center active-nav-link text-white py-2 pl-4 nav-item">
+                <a href="{% url 'register' %}" class="flex items-center text-white py-2 pl-4 nav-item">
                     <i class="fas fa-align-left mr-3"></i>
                     Crear Supervisores
                 </a>
@@ -155,6 +157,10 @@
         </header>
     
         <div class="w-full h-screen overflow-x-hidden border-t flex flex-col">
+            <div id="loading">
+                <!-- Aquí puedes añadir tu animación o imagen de carga -->
+                Cargando...
+            </div> 
             <main class="w-full flex-grow p-6">
                 {% block content %}
                 {% endblock %}
@@ -186,6 +192,10 @@
             document.body.appendChild(form);
             form.submit();
         });
+        window.addEventListener('load', function() {
+    console.log('La página ha terminado de cargar');
+    document.getElementById('loading').style.display = 'none';
+});
 
     </script>
 
